Increasing timeout for authentik healthchecks. Tdarr causes high CPU usage

--- a/02_base_resources/helm-values/authentik.yaml
+++ b/02_base_resources/helm-values/authentik.yaml
@@ -16,6 +16,14 @@ server:
     hosts:
       - "authentik.nigelvanhattum.nl"
 
+worker:
+  livenessProbe:
+    timeoutSeconds: 5
+  readinessProbe:
+    timeoutSeconds: 5
+  startupProbe:
+    timeoutSeconds: 5
+
 blueprints:
   configMaps:
     - ${blueprint_configmap}
