--- a/03_applications/helm-values/litellm.yaml
+++ b/03_applications/helm-values/litellm.yaml
@@ -37,6 +37,10 @@ proxy_config:
       litellm_params: 
         model: claude-3-5-haiku-latest
         api_key: "os.environ/ANTHROPIC_API_KEY" 
+    - model_name: Grok-2
+      litellm_params: 
+        model: xai/grok-2-1212
+        api_key: "os.environ/XAI_API_KEY" 
   general_settings:
     master_key: os.environ/PROXY_MASTER_KEY
 
