--- a/03_applications/helm-values/litellm.yaml
+++ b/03_applications/helm-values/litellm.yaml
@@ -33,9 +33,9 @@ proxy_config:
       litellm_params: 
         model: claude-3-7-sonnet-latest
         api_key: "os.environ/ANTHROPIC_API_KEY"
-    - model_name: claude-3.5
+    - model_name: claude-4
       litellm_params: 
-        model: claude-3-5-haiku-latest
+        model: claude-opus-4-20250514
         api_key: "os.environ/ANTHROPIC_API_KEY" 
     - model_name: Grok-2
       litellm_params: 
