--- a/02_base_resources/helm-values/grafana.yaml
+++ b/02_base_resources/helm-values/grafana.yaml
@@ -34,7 +34,7 @@ clusterMetrics:
   kube-state-metrics:
     deploy: true
   node-exporter:
-    deploy: true
+    deploy: false
     enabled: false
   opencost:
     enabled: false
