--- a/03_applications/helm-values/mealie.yaml
+++ b/03_applications/helm-values/mealie.yaml
@@ -15,7 +15,7 @@ mealie:
       storageClassName: nfs-csi-applications
   env: 
   - name: ALLOW_SIGNUP
-    value: "false"
+    value: "true"
   - name: PUID
     value: "${PUID}"
   - name: PGID
