--- a/03_applications/helm-values/open-webui.yaml
+++ b/03_applications/helm-values/open-webui.yaml
@@ -263,7 +263,7 @@ extraEnvVars:
         name: ${oidc_secret_name}
         key: config_url
   - name: OAUTH_MERGE_ACCOUNTS_BY_EMAIL
-    value: "false"
+    value: "true"
   - name: OAUTH_SCOPES
     value: "openid email profile"
   - name: ENABLE_OAUTH_GROUP_MANAGEMENT
