--- a/03_applications/helm-values/firefly.yaml
+++ b/03_applications/helm-values/firefly.yaml
@@ -24,6 +24,12 @@ firefly-iii:
     # -- Set this to the name of a secret to load environment variables from. If defined, values in the secret will override values in config.env
     existingSecret: ${firefly_secret_env}
 
+    env:
+      # APP_DEBUG: true
+      # APP_LOG_LEVEL: "debug"
+      # LOG_CHANNEL: "stack"
+      QUERY_PARSER_IMPLEMENTATION: "new"
+
   # -- A cronjob for [recurring Firefly III tasks](https://docs.firefly-iii.org/firefly-iii/advanced-installation/cron/).
   cronjob:
     # -- Set to true to enable the CronJob. Note that you need to specify either cronjob.auth.existingSecret or cronjob.auth.token for it to actually be deployed.
