--- a/03_applications/helm-values/plex-management.yaml
+++ b/03_applications/helm-values/plex-management.yaml
@@ -318,7 +318,7 @@ tdarr:
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
-      cpu: 3000m
+      cpu: 2
       memory: 2048M
     requests:
       cpu: 200m
