--- a/03_applications/helm-values/open-webui.yaml
+++ b/03_applications/helm-values/open-webui.yaml
@@ -73,10 +73,10 @@ ollama:
     # -- Pod limit
     limits:
       # Memory limit
-      memory: 6Gi
+      memory: 35Gi
       gpu.intel.com/i915: 1
       # CPU limit
-      cpu: 4000m
+      cpu: 4
 
   # Enable persistence using Persistent Volume Claims
   # ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
@@ -173,8 +173,8 @@ livenessProbe:
   httpGet:
     path: /health
     port: http
-  failureThreshold: 5
-  periodSeconds: 10
+  failureThreshold: 10
+  periodSeconds: 60
 
 # -- Probe for readiness of the Open WebUI container
 # ref: <https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes>
@@ -274,6 +274,8 @@ extraEnvVars:
   - name: OAUTH_SCOPES
     value: "openid email profile"
   - name: ENABLE_OAUTH_GROUP_MANAGEMENT
+    value: "True"
+  - name: PDF_EXTRACT_IMAGES
     value: "True"
   - name: OPENAI_API_KEYS
     valueFrom:
